[package]
name = "semantic-hashing-demo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.12"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
openai = "=1.0.0-alpha.14"
polars = { version = "0.37.0", features = ["lazy"] }
rand = "0.8.5"
rand_pcg = "0.3.1"

# logging
log = "0.4.20"
env_logger = "0.11.2"

# async
tokio = { version =  "1.34", features = ["rt-multi-thread", "macros"] }

